Add homepage for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "meraj-portfolio",
+  "homepage": "https://Meralak000.github.io/my-portfolio-2025",
   "private": true,
   "version": "0.0.0",
   "type": "module",
